fixed move-section overflow

--- a/public/defer.css
+++ b/public/defer.css
@@ -1567,8 +1567,6 @@ strong.buds {
     margin: 0;
     height: 100%;
     width: 100%;
-
-    overflow: hidden;
 }
 
 .move-section .card-wrap:not(.active),
